Fix alignment issue with game images in table cells

--- a/src/App.css
+++ b/src/App.css
@@ -158,7 +158,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100px;
+  width: unset;
 }
 
 .games-table .ui.table td .game-image .image {
