--- a/src/ResultsPage/ResultsPage.css
+++ b/src/ResultsPage/ResultsPage.css
@@ -38,7 +38,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100px;
+    width: unset;
 }
 
 .results-table .ui.table td .game-image .image {
